--- a/localization/fr.po
+++ b/localization/fr.po
@@ -62,6 +62,9 @@ msgstr "Description"
 msgid "Episodes"
 msgstr "Episodes"
 
+msgid "Estimated duration"
+msgstr "Durée estimée"
+
 msgid "Export All As HTML"
 msgstr "Exporter Tout En HTML..."
 
@@ -115,6 +118,9 @@ msgstr "Suivant"
 
 msgid "No results"
 msgstr "Pas de Résultats"
+
+msgid "No statistics available."
+msgstr "Statistiques non disponibles."
 
 msgid "No suggestions"
 msgstr "Pas de Suggestions"
@@ -197,6 +203,9 @@ msgstr "Ignorer"
 
 msgid "Sort by:"
 msgstr "Trier Par:"
+
+msgid "Statements"
+msgstr "Répliques"
 
 msgid "Statistics"
 msgstr "Statistiques"
